cityparkliquors/website-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eric-website
  name: website-service
  namespace: eric-website
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: eric-website
  type: ClusterIP
