cityparkliquors/website-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: eric-cloudflare
  name: eric-website-ingress
  namespace: eric-website
spec:
  ingressClassName: eric-cloudflare
  rules:
    - host: cityparkliquors.com
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: cityparkliquor.com
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.cityparkliquors.com
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.cityparkliquor.com
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.cplq.co
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: cplq.co
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 80
            path: /
            pathType: Prefix
